--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "expo-speech": "~8.0.0"
+    "expo-speech": "~8.0.0",
+    "expo-task-manager": "~8.0.0",
+    "expo-av": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
